--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Poppins', sans-serif;
+}
+
 fresh th {
 	background: linear-gradient(WhiteSmoke, lightgray);
 	text-align: left;
