--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
+input {
+	display: inline-block;
+	width: 180px;
+	height: 24px;
+}
+
 fresh th {
 	background: linear-gradient(WhiteSmoke, lightgray);
 	text-align: left;
